# JIRA-AI-Agent-POC

./: .gitignore  LICENSE  README.md  app.py  jira_batch_creator.py  main.py  pyproject.toml
attached_assets/: Pasted-UPDATED-PRD-Prompt-for-Replit-Agent-Jira-Batch-Issue-Creator-UI-1-Goal-Create-a-simple-web-based-1743281778228.txt  main.py
static/js/: script.js
templates/: index.html  login.html
