[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "atlassian-python-api>=4.0.0",
    "email-validator>=2.2.0",
    "flask>=3.1.0",
    "flask-sqlalchemy>=3.1.1",
    "gunicorn>=23.0.0",
    "langchain-community>=0.3.20",
    "langchain-core>=0.3.49",
    "langchain-google-genai>=2.1.2",
    "langgraph>=0.3.21",
    "psycopg2-binary>=2.9.10",
]
